fix text alignment

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -14,7 +14,6 @@ body{
 	font-family: Georgia, Verdana, Helvetica;
 	margin: 0;
 	line-height: 1.8em;
-	text-align: center;
 }
 
 #page{
